@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2021 DiffPlug
+ * Copyright 2016-2023 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,12 +16,10 @@
 package com.diffplug.spotless.maven;
 
 import static com.diffplug.common.base.Strings.isNullOrEmpty;
-import static java.util.Arrays.asList;
 import static java.util.Arrays.stream;
-import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonMap;
 import static java.util.stream.Collectors.toList;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.BufferedReader;
 import java.io.File;
@@ -33,7 +31,9 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
 
-import org.junit.Before;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 
 import com.github.mustachejava.DefaultMustacheFactory;
 import com.github.mustachejava.Mustache;
@@ -41,6 +41,8 @@ import com.github.mustachejava.MustacheFactory;
 
 import com.diffplug.common.base.Unhandled;
 import com.diffplug.common.io.Resources;
+import com.diffplug.spotless.Jvm;
+import com.diffplug.spotless.ProcessRunner;
 import com.diffplug.spotless.ResourceHarness;
 
 public class MavenIntegrationHarness extends ResourceHarness {
@@ -52,13 +54,16 @@ public class MavenIntegrationHarness extends ResourceHarness {
 	 */
 	private static final String SPOTLESS_MAVEN_VERSION_IDE = null;
 
-	private static final String LOCAL_MAVEN_REPOSITORY_DIR = "localMavenRepositoryDir";
+	private static final String POM_TEMPLATE = "/pom-test.xml.mustache";
 	private static final String SPOTLESS_MAVEN_PLUGIN_VERSION = "spotlessMavenPluginVersion";
+	private static final String BUILD = "build";
 	private static final String CONFIGURATION = "configuration";
 	private static final String EXECUTIONS = "executions";
 	private static final String MODULES = "modules";
+	private static final String DEPENDENCIES = "dependencies";
+	private static final String PLUGINS = "plugins";
 	private static final String MODULE_NAME = "name";
-	private static final String CHILD_ID = "childId";
+	private static final int REMOTE_DEBUG_PORT = 5005;
 
 	private final MustacheFactory mustacheFactory = new DefaultMustacheFactory();
 
@@ -76,9 +81,20 @@ public class MavenIntegrationHarness extends ResourceHarness {
 	 * GIT_ATTRIBUTES will use \n, so that tests match the test
 	 * resources on win and linux.
 	 */
-	@Before
-	public void gitAttributes() throws IOException {
+	@BeforeEach
+	void gitAttributes() throws IOException {
 		setFile(".gitattributes").toContent("* text eol=lf");
+		if (Jvm.version() >= 16) {
+			// for GJF https://github.com/diffplug/spotless/issues/834
+			setFile(".mvn/jvm.config").toContent(
+					"--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" +
+							" --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED" +
+							" --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED" +
+							" --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" +
+							" --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" +
+							// this last line is for Detekt
+							" --add-opens java.base/java.lang=ALL-UNNAMED");
+		}
 		// copy the mvnw resources
 		copy("mvnw").setExecutable(true);
 		copy("mvnw.cmd");
@@ -95,7 +111,7 @@ public class MavenIntegrationHarness extends ResourceHarness {
 	}
 
 	protected void writePomWithFormatSteps(String... steps) throws IOException {
-		writePom(formats(groupWithSteps("format", including("<include>src/**/java/**/*.java</include>"), steps)));
+		writePom(formats(groupWithSteps("format", including("src/**/java/**/*.java"), steps)));
 	}
 
 	protected void writePomWithAntlr4Steps(String... steps) throws IOException {
@@ -122,8 +138,12 @@ public class MavenIntegrationHarness extends ResourceHarness {
 		writePom(groupWithSteps("cpp", steps));
 	}
 
-	protected void writePomWithTypescriptSteps(String... steps) throws IOException {
-		writePom(groupWithSteps("typescript", including("**/*.ts"), steps));
+	protected void writePomWithJavascriptSteps(String includes, String... steps) throws IOException {
+		writePom(groupWithSteps("javascript", including(includes), steps));
+	}
+
+	protected void writePomWithTypescriptSteps(String includes, String... steps) throws IOException {
+		writePom(groupWithSteps("typescript", including(includes), steps));
 	}
 
 	protected void writePomWithSqlSteps(String... steps) throws IOException {
@@ -134,31 +154,81 @@ public class MavenIntegrationHarness extends ResourceHarness {
 		writePom(formats(groupWithSteps("format", including(includes), steps)));
 	}
 
-	protected void writePom(String... configuration) throws IOException {
-		writePom(null, configuration);
+	protected void writePomWithPrettierSteps(String[] plugins, String includes, String... steps) throws IOException {
+		writePom(null, formats(groupWithSteps("format", including(includes), steps)), null, plugins);
 	}
 
-	protected void writePom(String[] executions, String[] configuration) throws IOException {
-		String pomXmlContent = createPomXmlContent(executions, configuration);
+	protected void writePomWithPomSteps(String... steps) throws IOException {
+		writePom(groupWithSteps("pom", including("pom_test.xml"), steps));
+	}
+
+	protected void writePomWithMarkdownSteps(String... steps) throws IOException {
+		writePom(groupWithSteps("markdown", including("**/*.md"), steps));
+	}
+
+	protected void writePomWithJsonSteps(String... steps) throws IOException {
+		writePom(groupWithSteps("json", including("**/*.json"), steps));
+	}
+
+	protected void writePomWithYamlSteps(String... steps) throws IOException {
+		writePom(groupWithSteps("yaml", including("**/*.yaml"), steps));
+	}
+
+	protected void writePom(String... configuration) throws IOException {
+		writePom(null, configuration, null, null);
+	}
+
+	protected void writePom(String[] executions, String[] configuration, String[] dependencies, String[] plugins) throws IOException {
+		String pomXmlContent = createPomXmlContent(null, executions, configuration, dependencies, plugins);
 		setFile("pom.xml").toContent(pomXmlContent);
 	}
 
 	protected MavenRunner mavenRunner() throws IOException {
 		return MavenRunner.create()
 				.withProjectDir(rootFolder())
-				.withLocalRepository(new File(getSystemProperty(LOCAL_MAVEN_REPOSITORY_DIR)));
+				.withRunner(runner);
 	}
 
-	protected MultiModuleProjectCreator multiModuleProject() {
-		return new MultiModuleProjectCreator();
+	private static ProcessRunner runner;
+
+	@BeforeAll
+	static void setupRunner() throws IOException {
+		runner = new ProcessRunner();
 	}
 
-	private String createPomXmlContent(String[] executions, String[] configuration) throws IOException {
-		Map<String, Object> params = buildPomXmlParams(executions, configuration, null);
-		return createPomXmlContent("/pom-test.xml.mustache", params);
+	@AfterAll
+	static void closeRunner() throws IOException {
+		runner.close();
 	}
 
-	private String createPomXmlContent(String pomTemplate, Map<String, Object> params) throws IOException {
+	/**
+	 * Useful for local development. Allows debugging the Spotless Maven Plugin remotely.
+	 * Effectively translates into running {@code mvnDebug} on port 5005. The forked JVM will be
+	 * suspended until the debugger connects.
+	 */
+	protected MavenRunner mavenRunnerWithRemoteDebug() throws IOException {
+		return mavenRunner().withRemoteDebug(REMOTE_DEBUG_PORT);
+	}
+
+	protected String createPomXmlContent(String pluginVersion, String[] executions, String[] configuration, String[] dependencies, String[] plugins) throws IOException {
+		return createPomXmlContent(POM_TEMPLATE, pluginVersion, executions, configuration, dependencies, plugins);
+	}
+
+	protected String createPomXmlContent(String pomTemplate, String pluginVersion, String[] executions, String[] configuration, String[] dependencies, String[] plugins) throws IOException {
+		Map<String, Object> params = buildPomXmlParams(pluginVersion, null, executions, configuration, null, dependencies, plugins);
+		return createPomXmlContent(pomTemplate, params);
+	}
+
+	protected String createPomXmlContent(String pluginVersion, String[] executions, String[] configuration) throws IOException {
+		return createPomXmlContent(pluginVersion, executions, configuration, null, null);
+	}
+
+	protected String createPomXmlContent(String[] build, String[] configuration) throws IOException {
+		Map<String, Object> params = buildPomXmlParams(null, build, null, configuration, null, null, null);
+		return createPomXmlContent(POM_TEMPLATE, params);
+	}
+
+	protected String createPomXmlContent(String pomTemplate, Map<String, Object> params) throws IOException {
 		URL url = MavenIntegrationHarness.class.getResource(pomTemplate);
 		try (BufferedReader reader = Resources.asCharSource(url, StandardCharsets.UTF_8).openBufferedStream()) {
 			Mustache mustache = mustacheFactory.compile(reader, "pom");
@@ -168,9 +238,13 @@ public class MavenIntegrationHarness extends ResourceHarness {
 		}
 	}
 
-	private static Map<String, Object> buildPomXmlParams(String[] executions, String[] configuration, String[] modules) {
+	protected static Map<String, Object> buildPomXmlParams(String pluginVersion, String[] build, String[] executions, String[] configuration, String[] modules, String[] dependencies, String[] plugins) {
 		Map<String, Object> params = new HashMap<>();
-		params.put(SPOTLESS_MAVEN_PLUGIN_VERSION, getSystemProperty(SPOTLESS_MAVEN_PLUGIN_VERSION));
+		params.put(SPOTLESS_MAVEN_PLUGIN_VERSION, pluginVersion == null ? getSystemProperty(SPOTLESS_MAVEN_PLUGIN_VERSION) : pluginVersion);
+
+		if (build != null) {
+			params.put(BUILD, String.join("\n", build));
+		}
 
 		if (configuration != null) {
 			params.put(CONFIGURATION, String.join("\n", configuration));
@@ -185,6 +259,14 @@ public class MavenIntegrationHarness extends ResourceHarness {
 			params.put(MODULES, moduleNames);
 		}
 
+		if (dependencies != null) {
+			params.put(DEPENDENCIES, String.join("\n", dependencies));
+		}
+
+		if (plugins != null) {
+			params.put(PLUGINS, String.join("\n", plugins));
+		}
+
 		return params;
 	}
 
@@ -192,8 +274,6 @@ public class MavenIntegrationHarness extends ResourceHarness {
 		if (SPOTLESS_MAVEN_VERSION_IDE != null) {
 			if (name.equals("spotlessMavenPluginVersion")) {
 				return SPOTLESS_MAVEN_VERSION_IDE;
-			} else if (name.equals("localMavenRepositoryDir")) {
-				return new File("build/localMavenRepository").getAbsolutePath();
 			} else {
 				throw Unhandled.stringException(name);
 			}
@@ -205,7 +285,7 @@ public class MavenIntegrationHarness extends ResourceHarness {
 		return value;
 	}
 
-	private static String[] groupWithSteps(String group, String[] includes, String... steps) {
+	protected static String[] groupWithSteps(String group, String[] includes, String... steps) {
 		String[] result = new String[steps.length + includes.length + 2];
 		result[0] = "<" + group + ">";
 		System.arraycopy(includes, 0, result, 1, includes.length);
@@ -214,97 +294,22 @@ public class MavenIntegrationHarness extends ResourceHarness {
 		return result;
 	}
 
-	private static String[] groupWithSteps(String group, String... steps) {
+	protected static String[] groupWithSteps(String group, String... steps) {
 		return groupWithSteps(group, new String[]{}, steps);
 	}
 
-	private static String[] including(String... includes) {
-		return groupWithSteps("includes", includes);
+	protected static String[] including(String... includes) {
+		return groupWithSteps("includes", groupWithSteps("include", includes));
 	}
 
-	private static String[] formats(String... formats) {
+	protected static String[] formats(String... formats) {
 		return groupWithSteps("formats", formats);
 	}
 
-	protected class MultiModuleProjectCreator {
-
-		private String configSubProject;
-		private SubProjectFile[] configSubProjectFiles;
-		private String[] configuration;
-		private final Map<String, List<SubProjectFile>> subProjects = new LinkedHashMap<>();
-
-		protected MultiModuleProjectCreator withConfigSubProject(String name, SubProjectFile... files) {
-			configSubProject = name;
-			configSubProjectFiles = files;
-			return this;
-		}
-
-		protected MultiModuleProjectCreator withConfiguration(String... lines) {
-			configuration = lines;
-			return this;
-		}
-
-		protected MultiModuleProjectCreator addSubProject(String name, SubProjectFile... files) {
-			subProjects.put(name, asList(files));
-			return this;
-		}
-
-		protected void create() throws IOException {
-			createRootPom();
-			createConfigSubProject();
-			createSubProjects();
-		}
-
-		private void createRootPom() throws IOException {
-			List<Object> modulesList = new ArrayList<>();
-			modulesList.add(configSubProject);
-			modulesList.addAll(subProjects.keySet());
-			String[] modules = modulesList.toArray(new String[0]);
-
-			Map<String, Object> rootPomParams = buildPomXmlParams(null, configuration, modules);
-			setFile("pom.xml").toContent(createPomXmlContent("/multi-module/pom-parent.xml.mustache", rootPomParams));
-		}
-
-		private void createConfigSubProject() throws IOException {
-			if (configSubProject != null) {
-				String content = createPomXmlContent("/multi-module/pom-config.xml.mustache", emptyMap());
-				setFile(configSubProject + "/pom.xml").toContent(content);
-
-				createSubProjectFiles(configSubProject, asList(configSubProjectFiles));
-			}
-		}
-
-		private void createSubProjects() throws IOException {
-			for (Map.Entry<String, List<SubProjectFile>> entry : subProjects.entrySet()) {
-				String subProjectName = entry.getKey();
-				List<SubProjectFile> subProjectFiles = entry.getValue();
-
-				String content = createPomXmlContent("/multi-module/pom-child.xml.mustache", singletonMap(CHILD_ID, subProjectName));
-				setFile(subProjectName + "/pom.xml").toContent(content);
-
-				createSubProjectFiles(subProjectName, subProjectFiles);
-			}
-		}
-
-		private void createSubProjectFiles(String subProjectName, List<SubProjectFile> subProjectFiles) throws IOException {
-			for (SubProjectFile file : subProjectFiles) {
-				setFile(subProjectName + '/' + file.to).toResource(file.from);
-			}
-		}
-	}
-
-	protected static class SubProjectFile {
-
-		private final String from;
-		private final String to;
-
-		private SubProjectFile(String from, String to) {
-			this.from = from;
-			this.to = to;
-		}
-
-		protected static SubProjectFile file(String from, String to) {
-			return new SubProjectFile(from, to);
-		}
+	protected static String[] formats(String[]... formats) {
+		String[] formatsArray = Arrays.stream(formats)
+				.flatMap(Arrays::stream)
+				.toArray(String[]::new);
+		return formats(formatsArray);
 	}
 }
